Basic Login Form
create a renderForm to use for basic login purposes

--- a/techvology-app/src/App.css
+++ b/techvology-app/src/App.css
@@ -1,7 +1,7 @@
 html, body, #root {
     font: 0.9rem sans-serif;
-    background: #0a1f44;
-    color: #1e2432;
+    background: #024064;
+    color: #FFFFFF;
     height: 100%;
     margin: 0;
 }
