--- a/techvology-app/src/App.css
+++ b/techvology-app/src/App.css
@@ -1,7 +1,7 @@
 html, body, #root {
     font: 0.9rem sans-serif;
-    background: #024064;
-    color: #FFFFFF;
+    background: #FFFFFF;
+    color: #000000;
     height: 100%;
     margin: 0;
 }
